--- a/Spancirfest/Spancirfest/Modules/Common/Pickers/Pickers.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Common/Pickers/Pickers.storyboard
@@ -17,16 +17,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kr3-9J-iL4">
-                                <rect key="frame" x="0.0" y="494" width="414" height="368"/>
+                                <rect key="frame" x="0.0" y="562" width="414" height="300"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="fFA-G1-4QE">
-                                        <rect key="frame" x="47" y="55.5" width="320" height="257"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fFA-G1-4QE">
+                                        <rect key="frame" x="20" y="20" width="374" height="230"/>
                                         <subviews>
-                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="deR-ml-s61">
-                                                <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
+                                            <pickerView contentMode="scaleToFill" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="deR-ml-s61">
+                                                <rect key="frame" x="27" y="0.0" width="320" height="179"/>
                                             </pickerView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38L-wM-4rV">
-                                                <rect key="frame" x="95.5" y="216" width="129" height="41"/>
+                                                <rect key="frame" x="122.5" y="189" width="129" height="41"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                 <state key="normal" title="Set Location"/>
                                                 <connections>
@@ -38,8 +38,11 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="fFA-G1-4QE" firstAttribute="centerY" secondItem="kr3-9J-iL4" secondAttribute="centerY" id="2nd-0a-jnk"/>
-                                    <constraint firstItem="fFA-G1-4QE" firstAttribute="centerX" secondItem="kr3-9J-iL4" secondAttribute="centerX" id="69L-BH-Vfg"/>
+                                    <constraint firstItem="fFA-G1-4QE" firstAttribute="top" secondItem="kr3-9J-iL4" secondAttribute="top" constant="20" id="8Ba-3I-G3g"/>
+                                    <constraint firstAttribute="bottom" secondItem="fFA-G1-4QE" secondAttribute="bottom" constant="50" id="Fsx-Yp-5U4"/>
+                                    <constraint firstAttribute="height" constant="300" id="MlS-IH-vho"/>
+                                    <constraint firstAttribute="trailing" secondItem="fFA-G1-4QE" secondAttribute="trailing" constant="20" id="RpD-bG-feb"/>
+                                    <constraint firstItem="fFA-G1-4QE" firstAttribute="leading" secondItem="kr3-9J-iL4" secondAttribute="leading" constant="20" id="SYm-Ol-xYI"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -48,7 +51,6 @@
                             <constraint firstItem="57M-zN-G71" firstAttribute="bottom" secondItem="kr3-9J-iL4" secondAttribute="bottom" id="MW4-Zp-tAf"/>
                             <constraint firstItem="kr3-9J-iL4" firstAttribute="leading" secondItem="57M-zN-G71" secondAttribute="leading" id="Mr8-WI-7fU"/>
                             <constraint firstItem="57M-zN-G71" firstAttribute="trailing" secondItem="kr3-9J-iL4" secondAttribute="trailing" id="fVW-A8-Et8"/>
-                            <constraint firstItem="kr3-9J-iL4" firstAttribute="top" secondItem="57M-zN-G71" secondAttribute="top" constant="450" id="y96-I6-aVh"/>
                         </constraints>
                     </view>
                     <connections>
@@ -69,16 +71,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2vL-wc-DJe">
-                                <rect key="frame" x="0.0" y="444" width="414" height="418"/>
+                                <rect key="frame" x="0.0" y="562" width="414" height="300"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="HNi-5o-9g7">
-                                        <rect key="frame" x="20" y="20" width="374" height="378"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="HNi-5o-9g7">
+                                        <rect key="frame" x="20" y="20" width="374" height="230"/>
                                         <subviews>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="gkH-Yk-mAS">
-                                                <rect key="frame" x="27" y="0.0" width="320" height="337"/>
+                                                <rect key="frame" x="27" y="0.0" width="320" height="150"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="150" id="nP3-bg-fP6"/>
+                                                </constraints>
                                             </datePicker>
-                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a8O-mh-fqt">
-                                                <rect key="frame" x="142.5" y="337" width="89" height="41"/>
+                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a8O-mh-fqt">
+                                                <rect key="frame" x="142.5" y="170" width="89" height="60"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                 <state key="normal" title="Set Date"/>
                                                 <connections>
@@ -91,16 +96,16 @@
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="HNi-5o-9g7" firstAttribute="leading" secondItem="2vL-wc-DJe" secondAttribute="leading" constant="20" id="96D-T5-2Jn"/>
-                                    <constraint firstAttribute="bottom" secondItem="HNi-5o-9g7" secondAttribute="bottom" constant="20" id="YZG-iT-xJc"/>
+                                    <constraint firstAttribute="bottom" secondItem="HNi-5o-9g7" secondAttribute="bottom" constant="50" id="YZG-iT-xJc"/>
                                     <constraint firstItem="HNi-5o-9g7" firstAttribute="top" secondItem="2vL-wc-DJe" secondAttribute="top" constant="20" id="bwu-gu-hV3"/>
                                     <constraint firstAttribute="trailing" secondItem="HNi-5o-9g7" secondAttribute="trailing" constant="20" id="ms4-c7-0lf"/>
+                                    <constraint firstAttribute="height" constant="300" id="th0-LH-Qam"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="zN0-kB-DRY"/>
                         <constraints>
                             <constraint firstItem="zN0-kB-DRY" firstAttribute="bottom" secondItem="2vL-wc-DJe" secondAttribute="bottom" id="3DB-sH-WBE"/>
-                            <constraint firstItem="2vL-wc-DJe" firstAttribute="top" secondItem="zN0-kB-DRY" secondAttribute="top" constant="400" id="HXL-h1-gwL"/>
                             <constraint firstItem="2vL-wc-DJe" firstAttribute="leading" secondItem="zN0-kB-DRY" secondAttribute="leading" id="guD-Uw-bkc"/>
                             <constraint firstItem="zN0-kB-DRY" firstAttribute="trailing" secondItem="2vL-wc-DJe" secondAttribute="trailing" id="how-gv-Rym"/>
                         </constraints>
@@ -123,16 +128,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Phe-aO-GN5">
-                                <rect key="frame" x="0.0" y="494" width="414" height="368"/>
+                                <rect key="frame" x="0.0" y="562" width="414" height="300"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="AsO-vS-7i6">
-                                        <rect key="frame" x="47" y="55.5" width="320" height="257"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="AsO-vS-7i6">
+                                        <rect key="frame" x="20" y="20" width="374" height="230"/>
                                         <subviews>
                                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KTx-kH-gWX">
-                                                <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
+                                                <rect key="frame" x="27" y="0.0" width="320" height="216"/>
                                             </pickerView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8py-9D-fff">
-                                                <rect key="frame" x="92" y="216" width="136" height="41"/>
+                                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8py-9D-fff">
+                                                <rect key="frame" x="119" y="226" width="136" height="4"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                 <state key="normal" title="Set Category"/>
                                                 <connections>
@@ -144,15 +149,17 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="AsO-vS-7i6" firstAttribute="centerX" secondItem="Phe-aO-GN5" secondAttribute="centerX" id="Jn6-SI-D9B"/>
-                                    <constraint firstItem="AsO-vS-7i6" firstAttribute="centerY" secondItem="Phe-aO-GN5" secondAttribute="centerY" id="iW5-IY-NVB"/>
+                                    <constraint firstAttribute="trailing" secondItem="AsO-vS-7i6" secondAttribute="trailing" constant="20" id="2Fb-68-arZ"/>
+                                    <constraint firstItem="AsO-vS-7i6" firstAttribute="top" secondItem="Phe-aO-GN5" secondAttribute="top" constant="20" id="CEU-Nb-Jh8"/>
+                                    <constraint firstAttribute="height" constant="300" id="IQh-3B-bYC"/>
+                                    <constraint firstAttribute="bottom" secondItem="AsO-vS-7i6" secondAttribute="bottom" constant="50" id="Ur7-E3-KfJ"/>
+                                    <constraint firstItem="AsO-vS-7i6" firstAttribute="leading" secondItem="Phe-aO-GN5" secondAttribute="leading" constant="20" id="hau-Fg-HyS"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="t4u-Pk-etx"/>
                         <constraints>
                             <constraint firstItem="t4u-Pk-etx" firstAttribute="trailing" secondItem="Phe-aO-GN5" secondAttribute="trailing" id="HBC-GI-N0U"/>
-                            <constraint firstItem="Phe-aO-GN5" firstAttribute="top" secondItem="t4u-Pk-etx" secondAttribute="top" constant="450" id="aSt-M1-sfF"/>
                             <constraint firstItem="Phe-aO-GN5" firstAttribute="leading" secondItem="t4u-Pk-etx" secondAttribute="leading" id="oPI-RT-Ngb"/>
                             <constraint firstItem="t4u-Pk-etx" firstAttribute="bottom" secondItem="Phe-aO-GN5" secondAttribute="bottom" id="tfa-qR-j6d"/>
                         </constraints>
